fix responsive footer and about-us

--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -287,105 +287,110 @@ Oval rental
 
     <!-- footer -->
     <div id="footer">
-      <div class="container">
-        <div class="row rps_footer">
-          <div class="col col-sm-6 col-lg-3">
-            <div class="container-about-logo">
-              <a href="#">
-                <img src="../assets/img/Logo/logo1.webp" alt="logo" class="img-logo" />
-                <p>Oval Rental</p>
-              </a>
-
-            </div>
-            <div class="container-about-text">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc et
-                suscipit urna. Integer eleme ntum orci eu vehicula pretium.
-              </p>
-            </div>
-            <div class="social-list">
-              <a href="#"><i class="bi bi-pinterest"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-twitter"></i></a>
-              <a href="#"><i class="bi bi-globe2"></i></a>
-              <a href="#"><i class="bi bi-github"></i></a>
-            </div>
-          </div>
-          <div class="col col-sm-6 col-lg-3">
-            <h2>Blog Posts</h2>
-            <div class="container-blog">
-              <img src="../assets/img/Room/affordableRoom.jpg" alt="" />
-              <div class="container-blog-item">
-                <h4>Travel with us this year</h4>
-                <p>July 20, 2021</p>
+      <div class="footer_container">
+        <div class="grid wide">
+          <div class="row rps_footer">
+            <div class="footer-area col-12 col-md-6 col-lg-3">
+              <div class="container-about-logo">
+                <a href="#">
+                  <img src="../assets/img/Logo/logo1.webp" alt="logo" class="img-logo" />
+                  <p>Oval Rental</p>
+                </a>
+              </div>
+              <div class="container-about-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Vivamus quis vu lputate eros, iaculis consequat nisl. Nunc et
+                  suscipit urna. Integer eleme ntum orci eu vehicula pretium.
+                </p>
+              </div>
+              <div class="social-list">
+                <a href="#"><i class="bi bi-pinterest"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-globe2"></i></a>
+                <a href="#"><i class="bi bi-github"></i></a>
               </div>
             </div>
-            <div class="container-blog">
-              <img src="../assets/img/Room/doubleRoom.jpg" alt="" />
-              <div class="container-blog-item">
-                <h4>New destinations for you</h4>
-                <p>July 20, 2021</p>
+            <div class="footer-area col-12 col-md-6 col-lg-3 mgt32">
+              <h2>Blog Posts</h2>
+              <div class="column-blog">
+                <div class="container-blog">
+                  <img src="../assets/img/Room/affordableRoom.jpg" alt="" />
+                  <div class="container-blog-item">
+                    <h4>Travel with us this year</h4>
+                    <p>July 20, 2021</p>
+                  </div>
+                </div>
+                <div class="container-blog">
+                  <img src="../assets/img/Room/doubleRoom.jpg" alt="" />
+                  <div class="container-blog-item">
+                    <h4>New destinations for you</h4>
+                    <p>July 20, 2021</p>
+                  </div>
+                </div>
+                <div class="container-blog">
+                  <img src="../assets/img/Room/SingleRoom.jpg" alt="" />
+                  <div class="container-blog-item">
+                    <h4>Travel with us this year</h4>
+                    <p>July 20, 2021</p>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="container-blog">
-              <img src="../assets/img/Room/SingleRoom.jpg" alt="" />
-              <div class="container-blog-item">
-                <h4>Travel with us this year</h4>
-                <p>July 20, 2021</p>
+            <div class="footer-area col-12 col-md-6 col-lg-3 mgt32">
+              <h2>Tags</h2>
+              <div class="container-tag">
+                <ul>
+                  <li>
+                    <a href="#">design</a>
+                  </li>
+                  <li>
+                    <a href="#">fashion</a>
+                  </li>
+                  <li>
+                    <a href="#">music</a>
+                  </li>
+                  <li>
+                    <a href="#">video</a>
+                  </li>
+                  <li>
+                    <a href="#">party</a>
+                  </li>
+                  <li>
+                    <a href="#">photography</a>
+                  </li>
+                  <li>
+                    <a href="#">adventure</a>
+                  </li>
+                  <li>
+                    <a href="#">travel</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer-area col-12 col-md-6 col-lg-3 mgt32">
+              <h2>CONTACT INFO</h2>
+              <div class="container-contact-info">
+                <i class="bi bi-hospital"></i>
+                <span> 175 Tây Sơn Đống Đa Hà Nội </span>
+              </div>
+              <div class="container-contact-info">
+                <i class="bi bi-telephone"></i>
+                <span> +84 945 999 917 </span>
+              </div>
+              <div class="container-contact-info">
+                <i class="bi bi-envelope"></i>
+                <span> ovalrental@gmail.com </span>
+              </div>
+              <div class="container-contact-info">
+                <i class="bi bi-google"></i>
+                <span>www.google.com.vn</span>
               </div>
             </div>
           </div>
-          <div class="col col-sm-6 col-lg-3">
-            <h2>Tags</h2>
-            <div class="container-tag">
-              <ul>
-                <li>
-                  <a href="#">design</a>
-                </li>
-                <li>
-                  <a href="#">fashion</a>
-                </li>
-                <li>
-                  <a href="#">music</a>
-                </li>
-                <li>
-                  <a href="#">video</a>
-                </li>
-                <li>
-                  <a href="#">party</a>
-                </li>
-                <li>
-                  <a href="#">photography</a>
-                </li>
-                <li>
-                  <a href="#">adventure</a>
-                </li>
-                <li>
-                  <a href="#">travel</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col col-sm-6 col-lg-3">
-            <h2>CONTACT INFO</h2>
-            <div class="container-contact-info">
-              <i class="bi bi-hospital"></i>
-              <span> 175 Tây Sơn Đống Đa Hà Nội </span>
-            </div>
-            <div class="container-contact-info">
-              <i class="bi bi-telephone"></i>
-              <span> 0828807783 </span>
-            </div>
-            <div class="container-contact-info">
-              <i class="bi bi-envelope"></i>
-              <span> ovalrental@gmail.com </span>
-            </div>
-            <div class="container-contact-info">
-              <i class="bi bi-google"></i>
-              <span>www.google.com.vn</span>
-            </div>
-          </div>
+          <span class="copyright"> Copyright © 2022 By Team 5
+          </span>
         </div>
       </div>
     </div>
