--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -21,6 +21,18 @@
 
 <body>
   <div id="main">
+    <div class="star">
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+    </div>
     <!-- Begin: header -->
     <div id="header">
       <!--Begin: title -->
