change the size of animation image

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <img src="./assets/img/animated/icon-star.png" alt="" />
         <img src="./assets/img/animated/icon-star.png" alt="" />
         <img src="./assets/img/animated/icon-star.png" alt="" />
+        <img src="./assets/img/animated/icon-star.png" alt="" />
+        <img src="./assets/img/animated/icon-star.png" alt="" />
       </div>
       <!-- Begin: header -->
       <div id="header">
