--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -32,6 +32,8 @@
       <img src="../assets/img/animated/icon-star.png" alt="" />
       <img src="../assets/img/animated/icon-star.png" alt="" />
       <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
+      <img src="../assets/img/animated/icon-star.png" alt="" />
     </div>
     <!-- Begin: header -->
     <div id="header">
